Fix for hero heading line spacing on mobile

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:       TechCivics
  Author URI:   https://techcivics.com
  Template:     hueman
- Version:      0.5.0
+ Version:      0.5.1
  License:      GNU General Public License v3 or later
  License URI:  http://www.gnu.org/licenses/gpl-3.0.html
  Text Domain:  hueman-ydwa
@@ -470,6 +470,7 @@ form legend {
 }
 .ydwa-hero .sek-module-inner > .sek-heading {
     font-size: 36px;
+    line-height: normal;
 }
 .ydwa-hero p,
 .ydwa-hero li {
